--- a/META.yml
+++ b/META.yml
@@ -1,11 +1,11 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Catalyst-View-TT
-version:      0.04
-version_from: TT.pm
+version:      0.05
+version_from: lib/Catalyst/View/TT.pm
 installdirs:  site
 requires:
-    Catalyst:                      2.99
+    Catalyst:                      4.00
     Template:                      0
     Template::Timer:               0
 
