--- a/META.yml
+++ b/META.yml
@@ -1,11 +1,12 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Catalyst-View-TT
-version:      0.19
+version:      0.20
 version_from: lib/Catalyst/View/TT.pm
 installdirs:  site
 requires:
     Catalyst:                      5.5
+    Path::Class:                   0
     Template:                      0
     Template::Timer:               0
 
