--- a/META.yml
+++ b/META.yml
@@ -3,9 +3,12 @@ abstract: 'Template View Class'
 author:
   - 'Sebastian Riedel, C<sri@cpan.org>'
 build_requires:
+  ExtUtils::MakeMaker: 6.42
   Test::More: 0
+configure_requires:
+  ExtUtils::MakeMaker: 6.42
 distribution_type: module
-generated_by: 'Module::Install version 0.77'
+generated_by: 'Module::Install version 0.91'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -25,4 +28,5 @@ requires:
   perl: 5.8.1
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.29
+  repository: http://dev.catalyst.perl.org/repos/Catalyst/trunk/Catalyst-View-TT/
+version: 0.30
