--- a/META.yml
+++ b/META.yml
@@ -1,34 +1,37 @@
 ---
 abstract: 'Template View Class'
 author:
-  - 'Sebastian Riedel, C<sri@cpan.org>'
+  - 'Sebastian Riedel <sri@cpan.org>'
 build_requires:
-  ExtUtils::MakeMaker: 6.59
-  File::Spec: 0
-  Test::More: 0
+  ExtUtils::MakeMaker: '0'
+  File::Spec: '0'
+  Test::More: '0'
 configure_requires:
-  ExtUtils::MakeMaker: 6.59
-distribution_type: module
-dynamic_config: 1
-generated_by: 'Module::Install version 1.14'
+  ExtUtils::MakeMaker: '0'
+dynamic_config: 0
+generated_by: 'ExtUtils::MakeMaker version 7.0526, CPAN::Meta::Converter version 2.150005'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
-  version: 1.4
+  version: '1.4'
 name: Catalyst-View-TT
 no_index:
   directory:
-    - inc
     - t
+    - inc
 requires:
   Catalyst: '5.7'
-  Class::Accessor: 0
-  MRO::Compat: 0
-  Path::Class: 0
-  Template: 0
-  Template::Timer: 0
-  perl: 5.8.1
+  Class::Accessor: '0'
+  MRO::Compat: '0'
+  Path::Class: '0'
+  Template: '0'
+  Template::Timer: '0'
+  perl: '5.008001'
 resources:
-  license: http://dev.perl.org/licenses/
-  repository: git://git.shadowcat.co.uk/catagits/Catalyst-View-TT.git
-version: '0.42'
+  IRC: irc://irc.perl.org/#catalyst
+  MailingList: http://lists.scsys.co.uk/cgi-bin/mailman/listinfo/catalyst
+  bugtracker: https://rt.cpan.org/Public/Dist/Display.html?Name=Catalyst-View-TT
+  repository: https://github.com/perl-catalyst/Catalyst-View-TT.git
+version: '0.43'
+x_serialization_backend: 'CPAN::Meta::YAML version 0.017'
+
