--- a/META.yml
+++ b/META.yml
@@ -9,7 +9,7 @@ build_requires:
 configure_requires:
   ExtUtils::MakeMaker: '0'
 dynamic_config: 0
-generated_by: 'ExtUtils::MakeMaker version 7.0526, CPAN::Meta::Converter version 2.150005'
+generated_by: 'ExtUtils::MakeMaker version 7.1, CPAN::Meta::Converter version 2.150005'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -22,6 +22,7 @@ no_index:
 requires:
   Catalyst: '5.7'
   Class::Accessor: '0'
+  Data::Dump: '0'
   MRO::Compat: '0'
   Path::Class: '0'
   Template: '0'
@@ -32,6 +33,5 @@ resources:
   MailingList: http://lists.scsys.co.uk/cgi-bin/mailman/listinfo/catalyst
   bugtracker: https://rt.cpan.org/Public/Dist/Display.html?Name=Catalyst-View-TT
   repository: https://github.com/perl-catalyst/Catalyst-View-TT.git
-version: '0.43'
+version: '0.44'
 x_serialization_backend: 'CPAN::Meta::YAML version 0.017'
-
